--- a/index.html
+++ b/index.html
@@ -11,10 +11,17 @@
 <body>
     <main>
         <section id="telefone">
-            <iframe src="home.html" nome="tela" id="tela" frameborder="0"></iframe>
+            <iframe src="home.html" nome="tela" id="tela" frameborder="0">
+                <p style="font-weight: bold; text-align: center; padding-top: 45px;">Seu navegador não é compatível com isso.</p>
+            </iframe>
         </section>
         <section id="redes-sociais">
-
+            <a href="#" target="tela"><img src="imagens/logo-home.jpg" alt="Home"></a><br>
+            <a href="#" target="tela"><img src="imagens/logo-youtube.jpg" alt="Youtube"></a><br>
+            <a href="#" target="tela"><img src="imagens/logo-github.jpg" alt="Github"></a><br>
+            <a href="#" target="tela"><img src="imagens/logo-instagram.jpg" alt="Instagram"></a><br>
+            <a href="#" target="tela"><img src="imagens/logo-twitter.jpg" alt="Twitter"></a><br>
+            <a href="#" target="tela"><img src="imagens/logo-facebook.jpg" alt="Facebook"></a>
         </section>
     </main>
 </body>
