--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
             </iframe>
         </section>
         <section id="redes-sociais">
-            <a href="#" target="tela"><img src="imagens/logo-home.jpg" alt="Home"></a><br>
-            <a href="#" target="tela"><img src="imagens/logo-youtube.jpg" alt="Youtube"></a><br>
+            <a href="index.html" target="tela"><img src="imagens/logo-home.jpg" alt="Home"></a><br>
+            <a href="https://gustavoguanabara.github.io/" target="tela"><img src="imagens/logo-youtube.jpg" alt="Youtube"></a><br>
             <a href="#" target="tela"><img src="imagens/logo-github.jpg" alt="Github"></a><br>
             <a href="#" target="tela"><img src="imagens/logo-instagram.jpg" alt="Instagram"></a><br>
             <a href="#" target="tela"><img src="imagens/logo-twitter.jpg" alt="Twitter"></a><br>
