--- a/index.html
+++ b/index.html
@@ -2,26 +2,25 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Projeto Redes Sociais</title>
-    <link rel="stylesheet" href="estilos/style.css">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="estilos/style.css">
+    <title>Projeto Redes Sociais</title>
 </head>
 <body>
     <main>
         <section id="telefone">
-            <iframe src="home.html" nome="tela" id="tela" frameborder="0">
-                <p style="font-weight: bold; text-align: center; padding-top: 45px;">Seu navegador não é compatível com isso.</p>
+            <iframe src="home.html" name="tela" id="tela" frameborder="0">
+                Seu navegador não é compatível com isso.
             </iframe>
         </section>
         <section id="redes-sociais">
-            <a href="index.html" target="tela"><img src="imagens/logo-home.jpg" alt="Home"></a><br>
-            <a href="https://gustavoguanabara.github.io/" target="tela"><img src="imagens/logo-youtube.jpg" alt="Youtube"></a><br>
-            <a href="#" target="tela"><img src="imagens/logo-github.jpg" alt="Github"></a><br>
-            <a href="#" target="tela"><img src="imagens/logo-instagram.jpg" alt="Instagram"></a><br>
-            <a href="#" target="tela"><img src="imagens/logo-twitter.jpg" alt="Twitter"></a><br>
-            <a href="#" target="tela"><img src="imagens/logo-facebook.jpg" alt="Facebook"></a>
+            <a href="home.html" target="tela"><img src="imagens/logo-home.jpg" alt="Home"></a><br>
+            <a href="youtube.html" target="tela"><img src="imagens/logo-youtube.jpg" alt="YouTube"></a><br>
+            <a href="github.html" target="tela"><img src="imagens/logo-github.jpg" alt="Github"></a><br>
+            <a href="instagram.html" target="tela"><img src="imagens/logo-instagram.jpg" alt="Instagram"></a><br>
+            <a href="twitter.html" target="tela"><img src="imagens/logo-twitter.jpg" alt="Twitter"></a><br>
+            <a href="facebook.html" target="tela"><img src="imagens/logo-facebook.jpg" alt="Facebook"></a>
         </section>
     </main>
 </body>
